# angle

./: .graphqlconfig  Cargo.toml  Cross.toml  Makefile  Tiltfile  buf.work.yaml  build.rs  deny.toml
.cargo/: config.toml
.github/: labeler.yml  semantic.yml
.github/workflows/: protobuf.yml
benches/codecs/: character_delimited_bytes.rs  encoder.rs  newline_bytes.rs
benches/dnstap/: mod.rs
config/: angle.yaml
cue.mod/: module.cue
distribution/: install.sh
distribution/docker/: README.md  README.md.erb
distribution/helm/: README.md
distribution/init.d/: angle
distribution/msi/: angle-cmd.bat  angle.wxs.tmpl  build.sh
distribution/rpm/: angle.spec
distribution/systemd/: angle.default  angle.service  hardened-angle.service
lib/angle-api-client/: Cargo.toml
lib/angle-buffers/: Cargo.toml
lib/angle-common/: Cargo.toml
lib/angle-config/: Cargo.toml
lib/angle-config-common/: Cargo.toml
lib/angle-config-macros/: Cargo.toml
lib/angle-core/: Cargo.toml  README.md
lib/angle-lib/: Cargo.toml
lib/angle-lib/src/: lib.rs
lib/angle-lookup/: Cargo.toml
lib/angle-lookup/src/lookup_v2/: mod.rs  optional_path.rs
lib/angle-stream/: Cargo.toml
lib/angle-vrl/tests/: Cargo.toml  README.md
lib/angle-vrl/tests/src/: main.rs
lib/codecs/: Cargo.toml
lib/dnsmsg-parser/: Cargo.toml
lib/docs-renderer/: Cargo.toml
lib/docs-renderer/src/: main.rs  renderer.rs
lib/enrichment/: Cargo.toml
lib/fakedata/: Cargo.toml
lib/file-source/: Cargo.toml
lib/k8s-e2e-tests/: Cargo.toml
lib/k8s-test-framework/: Cargo.toml
lib/opentelemetry-proto/: Cargo.toml
lib/portpicker/: Cargo.toml
lib/prometheus-parser/: Cargo.toml
lib/tracing-limit/: Cargo.toml
proto/: angle.proto
scripts/: README.md  build-docker.sh  build.sh  check-criterion-output.sh  check-events  check-one-feature  check-style.sh  checksum.sh  deploy-chart-test.sh  ensure-wasm-pack-installed.sh  generate-component-docs.rb  generate-manifests.sh  generate-release-cue.rb  package-archive.sh  package-deb.sh  package-msi.sh  package-rpm.sh  release-commit.rb  release-s3.sh  start-docker-registry.sh  sync-install.sh  test-behavior.sh  test-e2e-kubernetes.sh  upload-benchmarks-s3.sh  upload-test-results.sh  verify-install.sh  verify-nix.sh
scripts/environment/: Dockerfile  bootstrap-ubuntu-20.04.sh  prepare.sh
scripts/integration/: README.md
scripts/util/: commit.rb  conventional_commit.rb  git_log_commit.rb  release.rb
src/: amqp.rs  angle_windows.rs  app.rs  cli.rs  docker.rs  encoding_transcode.rs  expiring_hash_map.rs  gcp.rs  generate.rs  generate_schema.rs  graph.rs  http.rs  kafka.rs  lib.rs  line_agg.rs  list.rs  main.rs  nats.rs  serde.rs  service.rs  signal.rs  template.rs  trace.rs  types.rs  unit_test.rs  validate.rs
src/api/: mod.rs  server.rs  tap.rs
src/aws/: auth.rs  mod.rs  region.rs
src/common/: datadog.rs
src/conditions/: datadog_search.rs  mod.rs  vrl.rs
src/config/: api.rs  builder.rs  cmd.rs  compiler.rs  enrichment_table.rs  enterprise.rs  graph.rs  id.rs  mod.rs  provider.rs  schema.rs  secret.rs  sink.rs  (+5 more)
tilt/: Dockerfile
website/: README.md  config.toml  package.json  tailwind.config.js
workload-checks/: README.md
(+1372 files in other folders)
