[package]
name = "angle-lookup"
version = "0.1.0"
authors = ["Angle Contributors <angle@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.192", default-features = false, features = ["derive", "alloc"] }
angle-config = { path = "../angle-config" }
angle-config-macros = { path = "../angle-config-macros" }
vrl.workspace = true

[features]
test = []
