[package]
name = "docs-renderer"
version = "0.1.0"
authors = ["Angle Contributors <angle@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
snafu = { version = "0.7.5", default-features = false }
tracing = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "tracing-log"] }
angle-config = { path = "../angle-config" }
angle-config-common = { path = "../angle-config-common" }
