[package]
name = "angle-vrl-tests"
version = "0.1.0"
authors = ["Angle Contributors <angle@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
enrichment = { path = "../../enrichment" }
vrl.workspace = true
angle-vrl-functions = { path = "../../angle-vrl/functions" }

ansi_term = "0.12"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3"
prettydiff = "0.6"
regex = "1"
serde = "1"
serde_json = "1"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4" }

[features]
default = []
